# bytewaves

./: Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
bytewaves/: __init__.py  modem.py
scripts/: test.sh
tests/: README.md
tests/integration/: test_end_to_end.py
tests/performance/: test_benchmarks.py
tests/unit/: test_audio_generation.py  test_edge_cases.py  test_encoding_decoding.py  test_equalizer.py  test_preamble_sync.py  test_reed_solomon.py
